--- a/Tailwind-Temelleri-1/Calistirma-Ortami/index.html
+++ b/Tailwind-Temelleri-1/Calistirma-Ortami/index.html
@@ -7,29 +7,6 @@
     <link rel="stylesheet" href="dist/output.css" />
   </head>
   <body>
-    <div class="flex items-center justify-center">
-      <h1 class="text-3xl text-clifford font-bold">Colors</h1>
-    </div>
-    <!-- Text Colors -->
-    <p class="text-blue-400">Lorem, ipsum dolor.</p>
-    <!-- Background Colors -->
-    <div class="bg-emerald-700 text-white"><p>Lorem, ipsum dolor.</p></div>
-    <!-- Decorations Colors -->
-    <p class="underline decoration-amber-400">Lorem, ipsum dolor.</p>
-    <!-- Border Colors  -->
-    <div class="my-4 border-4 border-fuchsia-800">Lorem, ipsum.</div>
-    <!-- Outline Colors -->
-    <button type="button" class="outline-offset-4 outline-2 outline-blue-500">
-      Click Me
-    </button>
-    <br />
-    <!-- Shadow Colors -->
-    <button class="shadow-lg shadow-purple-500/50 p-4">Lorem.</button>
-
-    <!-- Accent Colors -->
-    <label>
-      <input class="accent-clifford" type="checkbox" checked />
-      Lorem ipsum dolor sit amet.
-    </label>
+    <h1 class="text-3xl font-bold text-clifford">Hello World!</h1>
   </body>
 </html>
